--- a/index.html
+++ b/index.html
@@ -7,21 +7,17 @@
         <title>Horloge</title>
     </head>
     <body>
-        <div class="clock">
-            <div class="wrap">
-                <!-- heure -->
-                <div class="heure"></div>
-
-                <!-- minute -->
-                <div class="minute"></div>
-
-                <!-- seconde -->
-                <div class="seconde"></div>
-
-                <!-- point -->
-                <div class="point"></div>
+        <!-- conteneur général de la montre et cadran-->
+        <div class="wrapper">
+            <!-- conteneur des aiguilles -->
+            <div class="hands">
+                <div class="hours"></div>
+                <div class="minutes"></div>
+                <div class="seconds"></div>
             </div>
+            <div class="button"></div>
         </div>
+
         <script src="assets/js/script.js"></script>
     </body>
 </html>
